Cambio de timepick a datepick

--- a/frontend/src/app/components/departments/departments.component.html
+++ b/frontend/src/app/components/departments/departments.component.html
@@ -328,13 +328,13 @@
                                                          
                                                   </div>
                                                   <div class="input-field col s6">
-                                                  <input type="text" class="timepicker" id="checkin" name="checkin" #checkin="ngModel" [ngModel]="departmentService.selectedDepartment.checkin"
+                                                  <input type="text" class="datepicker" id="checkin" name="checkin" #checkin="ngModel" [ngModel]="departmentService.selectedDepartment.checkin"
                                                   autocomplete="nope">
                                                   <label for="checkin">Check-in</label>
                                                   </div>
                                               
                                                   <div class="input-field col s6">
-                                                  <input type="text" class="timepicker" id="checkout" name="checkout" #checkout="ngModel" [ngModel]="departmentService.selectedDepartment.checkout"
+                                                  <input type="text" class="datepicker" id="checkout" name="checkout" #checkout="ngModel" [ngModel]="departmentService.selectedDepartment.checkout"
                                                   autocomplete="nope">
                                                   <label for="checkout">Check-out</label>
                                                   </div>
